# agentic-ai-backend

./: .gitignore  main.py  pyproject.toml  requirements.txt
api/: chat.py
core/: config.py  db.py  state.py
graph/: factory.py  nodes.py
llm/: base.py
services/: chat_service.py
tools/: builtin.py  mcp.py  rag.py
